--- a/index.html
+++ b/index.html
@@ -72,13 +72,8 @@
             </div>
         </div>
 
-        <!-- כפתורי פעולה -->
-        <div class="grid grid-cols-2 gap-3 mt-6">
-            <!-- כפתור חישוב -->
-            <button onclick="calculateCost()" 
-                    class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-lg text-lg font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out transform hover:scale-[1.01]">
-                חשב את המימון
-            </button>
+        <!-- כפתורי פעולה - שונה ל-grid-cols-1 -->
+        <div class="grid grid-cols-1 gap-3 mt-6">
             
             <!-- כפתור שמירה -->
             <button onclick="saveCalculation()" 
