--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             </h2>
             <div class="space-y-2 text-gray-700 text-base font-medium">
                 <p>
-                    <span class="text-indigo-600 font-semibold">תקציב קבוע:</span> 
-                    <span class="float-left rtl:float-right font-extrabold">10,000 ש"ח</span>
+                    <span class="text-indigo-600 font-semibold">10,000 ש"ח</span> 
+                    <span class="float-left rtl:float-right font-extrabold">תקציב קבוע:</span> 
                 </p>
                 <p>
-                    <span class="text-indigo-600 font-semibold">עלות למשתתף מלא:</span> 
-                    <span class="float-left rtl:float-right">525 ש"ח</span>
+                    <span class="text-indigo-600 font-semibold">525 ש"ח</span> 
+                    <span class="float-left rtl:float-right font-extrabold">עלות למשתתף מלא:</span>
                 </p>
                 <p>
-                    <span class="text-indigo-600 font-semibold">עלות למשתתף חלקי:</span> 
-                    <span class="float-left rtl:float-right">325 ש"ח</span>
+                    <span class="text-indigo-600 font-semibold">325 ש"ח</span> 
+                    <span class="float-left rtl:float-right font-extrabold">עלות למשתתף חלקי:</span>
                 </p>
             </div>
         </div>
