--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                 </div>
 
                 <div>
-                    <label for="costFullInput" class="block text-sm font-semibold text-gray-700 mb-1">עלות למשתתף מלא (ש"ח):</label>
-                    <input type="number" id="costFullInput" value="525" min="0" 
+                    <label for="costFullInput" class="block text-sm font-semibold text-gray-700 mb-1">עלות למשתתף מלא + יקב :</label>
+                    <input type="number" id="costFullInput" value="575" min="0" 
                         class="block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm text-lg text-center font-bold focus:ring-indigo-500 focus:border-indigo-500"
                         oninput="calculateCost()">
                 </div>
                 
                 <div>
-                    <label for="costPartialInput" class="block text-sm font-semibold text-gray-700 mb-1">עלות למשתתף חלקי (ש"ח):</label>
-                    <input type="number" id="costPartialInput" value="325" min="0" 
+                    <label for="costPartialInput" class="block text-sm font-semibold text-gray-700 mb-1">עלות למשתתף חלקי : לינה + א.ערב + א.בוקר</label>
+                    <input type="number" id="costPartialInput" value="375" min="0" 
                         class="block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm text-lg text-center font-bold focus:ring-indigo-500 focus:border-indigo-500"
                         oninput="calculateCost()">
                 </div>
